# fitbek

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  data.db  data.db-shm  data.db-wal  docker-compose.yml
entity/: Cargo.toml
entity/src/: feedbacks.rs  lib.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250314_000002_create_forms_tables.rs
src/: lib.rs  main.rs  routes.rs
src/app/: mod.rs  utils.rs
src/app/controllers/: auth_controller.rs  feedback_controller.rs  form_controller.rs  login_page.rs  mod.rs  user_controller.rs
src/app/models/: feedback.rs  form.rs  mod.rs  user.rs
src/app/pages/: admin_forms.rs  mod.rs  public_form.rs
src/app/repositories/: feedback_repository.rs  mod.rs  user_repository.rs
src/app/services/: feedback_service.rs  form_service.rs  mod.rs  user_service.rs
src/app/utils/: auth.rs  error.rs  format_date.rs
src/config/: database.rs  mod.rs
style/: tailwind.css
