[workspace]
members = [".", "entity", "migration"]

[package]
name = "fitbek"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web framework
axum = { version = "0.8", optional = true }
console_error_panic_hook = "0.1"
leptos = { version = "0.8.6" }
leptos_meta = { version = "0.8.6" }
leptos_axum = { version = "0.8.6", optional = true }
leptos_router = { version = "0.8.6" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.6.8", features = ["fs", "cors"], optional = true }
wasm-bindgen = "0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
bcrypt = { version = "0.19.0", optional = true }
dotenvy = "0.15.6"

# Database layer
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], optional = true }
entity = { path = "entity", optional = true }
migration = { path = "migration", optional = true }
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], optional = true }
axum-extra = { version = "0.12.5", features = ["cookie"], optional = true }
tower_governor = { version = "0.8.0", optional = true }
governor = { version = "0.10.4", optional = true }
cookie = "0.18.1"
time = "0.3.47"
serde_json = "1.0.149"
web-sys = "0.3.91"
uuid = { version = "1.22.0", features = ["v4", "js", "serde"] }

[features]
hydrate = [
  "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:sea-orm",
    "dep:tracing-subscriber",
    "dep:bcrypt",
    "dep:entity",
    "dep:migration",
    "dep:jsonwebtoken",
    "dep:axum-extra",
    "dep:tower_governor",
    "dep:governor",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "fitbek"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/tailwind.css"
assets-dir = "public"
site-addr = "127.0.0.1:8090"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
